@@ -3,3 +3,4 @@ Makefile.in
 .deps
 .libs
 *.lo
+ktoblzcheck.h
