@@ -1,3 +1,11 @@
+2006-02-13   Christian Stimming <stimming@tuhh.de>
+
+	* configure.ac: Release version ktoblzcheck-1.10.
+
+	* src/include/ktoblzcheck.h.in: Make the header file an
+	auto-generated file so that the package version number is
+	available as a #define.
+
 2006-02-01   Christian Stimming <stimming@tuhh.de>
 
 	* src/bankdata/bankdata.txt: Updated bankdata file, now valid from
